--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "react": "^19.2.3"
+    "react": "^19.2.3",
+    "@vercel/node": "^5.5.16",
+    "mongodb": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
