--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
     "react": "^19.2.3",
-    "mongodb": "^7.0.0",
-    "@vercel/node": "^5.5.16"
+    "@vercel/node": "^5.5.16",
+    "mongodb": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
